--- a/Shop/app/src/main/AndroidManifest.xml
+++ b/Shop/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity android:name=".personal.PasswordActivity"/>
         <activity android:name=".personal.MailActivity"
             android:parentActivityName=".PersonalActivity"/>
-        <activity android:name=".personal.PhoneActivity" />
+        <activity android:name=".personal.PhoneActivity"
+            android:parentActivityName=".PersonalActivity"/>
         <activity android:name=".personal.NameActivity"
             android:parentActivityName=".PersonalActivity"/>
         <activity android:name=".PersonalActivity" />
